--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         <div data-aos="flip-right" class="project-container software">
           <h2>Software Projects</h2>
           <div class="softwares">
-            <div data-aos="zoom-in" class="soft">
+            <div class="soft">
               <div class="card-front">
                 <h3>Java Examination System</h3>
                 <p>click for more information</p>
@@ -221,7 +221,7 @@
                 >
               </div>
             </div>
-            <div data-aos="zoom-in" class="soft">
+            <div class="soft">
               <div class="card-front">
                 <h3>Idea Generator and Analyzer</h3>
                 <p>click for more information</p>
@@ -234,12 +234,14 @@
                 <a href="https://github.com/anwarrali/idea-generator"
                   >GitHub Repo</a
                 >
-                <a href="https://idea-generator-production.up.railway.app/"
-                   target="_blank">Live demo</a
+                <a
+                  href="https://idea-generator-production.up.railway.app/"
+                  target="_blank"
+                  >Live demo</a
                 >
               </div>
             </div>
-            <div data-aos="zoom-in" class="soft">
+            <div class="soft">
               <div class="card-front">
                 <h3>Travel App</h3>
                 <p>click for more information</p>
@@ -252,7 +254,7 @@
                 <a href="https://github.com/anwarrali/TravelApp">GitHub Repo</a>
               </div>
             </div>
-            <div data-aos="zoom-in" class="soft" style="display: none">
+            <div class="soft" style="display: none">
               <div class="card-front">
                 <h3>Task Manager</h3>
                 <p>click for more information</p>
@@ -271,19 +273,19 @@
         <div data-aos="flip-left" class="project-container hardware">
           <h2>Hardware Projects</h2>
           <div class="hardwares">
-            <div data-aos="zoom-in" class="hard">
+            <div class="hard">
               <div class="card-front">
                 <h3>Computer Vision LED Controller</h3>
                 <p>click for more information</p>
               </div>
               <div class="card-back">
                 <h4>
-                  A computer vision system using Python that counts fingers and controls LEDs
-                  via Arduino.
+                  A computer vision system using Python that counts fingers and
+                  controls LEDs via Arduino.
                 </h4>
               </div>
             </div>
-            <div data-aos="zoom-in" class="hard">
+            <div class="hard">
               <div class="card-front">
                 <h3>Memory Game (Arduino)</h3>
                 <p>click for more information</p>
@@ -292,7 +294,7 @@
                 <h4>A memory game with LEDs programmed on Arduino.</h4>
               </div>
             </div>
-            <div data-aos="zoom-in" class="hard">
+            <div class="hard">
               <div class="card-front">
                 <h3>
                   Power Amplifier <br />
@@ -307,7 +309,7 @@
                 </h4>
               </div>
             </div>
-            <div data-aos="zoom-in" class="hard" style="display: none">
+            <div class="hard" style="display: none">
               <div class="card-front">
                 <h3>Clock Generator with BJT</h3>
                 <p>click for more information</p>
