--- a/index.html
+++ b/index.html
@@ -89,6 +89,13 @@
               making meaningful contributions to the technology community.
             </p>
           </div>
+          <a
+            data-aos="zoom-in"
+            href="pdfs/AnwarRoumanenCV.pdf"
+            download
+            class="download-btn"
+            >Download My CV</a
+          >
           <div data-aos="fade-up" class="contact-info">
             <div class="info-item">
               <i class="fas fa-envelope"></i>
@@ -101,13 +108,6 @@
               <span>Jericho, Palestine</span>
             </div>
           </div>
-          <a
-            data-aos="fade-up"
-            href="pdfs/AnwarRoumanenCV.pdf"
-            download
-            class="download-btn"
-            >Download My CV</a
-          >
         </div>
       </section>
       <!-- programming skills-->
@@ -206,7 +206,7 @@
         <div data-aos="flip-right" class="project-container software">
           <h2>Software Projects</h2>
           <div class="softwares">
-            <div class="soft">
+            <div data-aos="zoom-in" class="soft">
               <div class="card-front">
                 <h3>Java Examination System</h3>
                 <p>click for more information</p>
@@ -221,7 +221,7 @@
                 >
               </div>
             </div>
-            <div class="soft">
+            <div data-aos="zoom-in" class="soft">
               <div class="card-front">
                 <h3>Idea Generator and Analyzer</h3>
                 <p>click for more information</p>
@@ -241,7 +241,7 @@
                 >
               </div>
             </div>
-            <div class="soft">
+            <div data-aos="zoom-in" class="soft">
               <div class="card-front">
                 <h3>Travel App</h3>
                 <p>click for more information</p>
@@ -254,7 +254,7 @@
                 <a href="https://github.com/anwarrali/TravelApp">GitHub Repo</a>
               </div>
             </div>
-            <div class="soft" style="display: none">
+            <div data-aos="zoom-in" class="soft" style="display: none">
               <div class="card-front">
                 <h3>Task Manager</h3>
                 <p>click for more information</p>
@@ -273,7 +273,7 @@
         <div data-aos="flip-left" class="project-container hardware">
           <h2>Hardware Projects</h2>
           <div class="hardwares">
-            <div class="hard">
+            <div data-aos="zoom-in" class="hard">
               <div class="card-front">
                 <h3>Computer Vision LED Controller</h3>
                 <p>click for more information</p>
@@ -285,7 +285,7 @@
                 </h4>
               </div>
             </div>
-            <div class="hard">
+            <div data-aos="zoom-in" class="hard">
               <div class="card-front">
                 <h3>Memory Game (Arduino)</h3>
                 <p>click for more information</p>
@@ -294,7 +294,7 @@
                 <h4>A memory game with LEDs programmed on Arduino.</h4>
               </div>
             </div>
-            <div class="hard">
+            <div data-aos="zoom-in" class="hard">
               <div class="card-front">
                 <h3>
                   Power Amplifier <br />
@@ -309,7 +309,7 @@
                 </h4>
               </div>
             </div>
-            <div class="hard" style="display: none">
+            <div data-aos="zoom-in" class="hard" style="display: none">
               <div class="card-front">
                 <h3>Clock Generator with BJT</h3>
                 <p>click for more information</p>
