--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <img src="images/me.png" alt="my avatar" class="my-avatar" />
         </div>
         <div class="desc">
-          <div>
+          <div class="text">
             <h1 data-aos="fade-up">
               <span id="name">Anwar Roumanen</span>
             </h1>
@@ -472,6 +472,7 @@
         duration: 1200,
         once: false,
       });
+
     </script>
   </body>
 </html>
