--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           <div data-aos="fade-up" class="contact-info">
             <div class="info-item">
               <i class="fas fa-envelope"></i>
-              <a href="mailto:you@example.com"
+              <a href="mailto:anwar.roumanen@students.alquds.edu"
                 >anwar.roumanen@students.alquds.edu</a
               >
             </div>
@@ -472,7 +472,6 @@
         duration: 1200,
         once: false,
       });
-
     </script>
   </body>
 </html>
