--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="info-item">
               <i class="fas fa-envelope"></i>
               <a href="mailto:anwar.roumanen@students.alquds.edu"
-                >anwar.roumanen@students.alquds.edu</a
+                >grandtwoaar@gmail.com</a
               >
             </div>
             <div class="info-item">
