--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -80,15 +80,15 @@
         <div class="about-con">
           <div class="about-text">
             <p data-aos="fade-up">
-              I am a computer engineering student with a passion for software
-              and hardware development. I enjoy creating innovative solutions
-              that bridge the gap between technology and everyday life.
+              I'm a computer engineering student who loves building complete
+              solutions from hardware circuits to backend systems, and yes, I
+              enjoy frontend development too. I love understanding how things
+              work at every level.
             </p>
             <p data-aos="fade-up">
-              My journey in computer engineering has provided me with a solid
-              foundation in programming, electronics, and problem-solving. I am
-              passionate about applying my skills to real-world projects and
-              making meaningful contributions to the technology community.
+              I'm passionate about IoT, embedded systems, and full-stack
+              development. My goal is to keep learning and building meaningful
+              projects that bridge hardware, software, and user experience.
             </p>
           </div>
           <a
@@ -96,13 +96,13 @@
             href="pdfs/AnwarRoumanenCV.pdf"
             download
             class="download-btn"
-            >Download My CV</a
+            >CV</a
           >
           <div data-aos="fade-up" class="contact-info">
             <div class="info-item">
               <i class="fas fa-envelope"></i>
               <a href="mailto:anwar.roumanen@students.alquds.edu"
-                >grandtwoaar@gmail.com</a
+                >anwar.roumanen@students.alquds.edu</a
               >
             </div>
             <div class="info-item">
@@ -112,102 +112,40 @@
           </div>
         </div>
       </section>
-      <!-- programming skills-->
+      <!-- Tech Skills Section -->
       <section class="progSkills">
-        <h2 data-aos="fade-up">Tech Skills</h2>
-        <ul data-aos="fade-up" class="skills-list">
-          <li>
-            <h5>
-              Html&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            </h5>
-            <div class="skills-bar">
-              <div class="bar" data-width="95%"></div>
-            </div>
-          </li>
-          <li>
-            <h5>
-              JavaScript&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            </h5>
-            <div class="skills-bar">
-              <div class="bar" data-width="70%"></div>
-            </div>
-          </li>
-          <li>
-            <h5>
-              Java&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            </h5>
-            <div class="skills-bar">
-              <div class="bar" data-width="65%"></div>
-            </div>
-          </li>
-          <li>
-            <h5>
-              Python&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            </h5>
-            <div class="skills-bar">
-              <div class="bar" data-width="70%"></div>
-            </div>
-          </li>
-          <li>
-            <h5>
-              Node.js&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            </h5>
-            <div class="skills-bar">
-              <div class="bar" data-width="60%"></div>
-            </div>
-          </li>
-          <li>
-            <h5>
-              CSS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            </h5>
-            <div class="skills-bar">
-              <div class="bar" data-width="80%"></div>
-            </div>
-          </li>
-          <li>
-            <h5>RestFull API&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h5>
-            <div class="skills-bar">
-              <div class="bar" data-width="75%"></div>
-            </div>
-          </li>
-          <li>
-            <h5>
-              SQL&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            </h5>
-            <div class="skills-bar">
-              <div class="bar" data-width="78%"></div>
-            </div>
-          </li>
-          <li>
-            <h5>
-              Arduino
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            </h5>
-            <div class="skills-bar">
-              <div class="bar" data-width="90%"></div>
-            </div>
-          </li>
-          <li>
-            <h5>PCB design&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h5>
-            <div class="skills-bar">
-              <div class="bar" data-width="45%"></div>
-            </div>
-          </li>
-          <li>
-            <h5>
-              Assembly&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            </h5>
-            <div class="skills-bar">
-              <div class="bar" data-width="25%"></div>
-            </div>
-          </li>
-        </ul>
+        <h2 data-aos="fade-up">Technical Expertise</h2>
+
+        <!-- Category Tabs (Optional) -->
+        <div class="skill-categories" data-aos="fade-up">
+          <button class="category-btn active" data-category="all">All</button>
+          <button class="category-btn" data-category="frontend">
+            Frontend
+          </button>
+          <button class="category-btn" data-category="backend">Backend</button>
+          <button class="category-btn" data-category="database">
+            Database
+          </button>
+          <button class="category-btn" data-category="hardware">
+            Hardware/IoT
+          </button>
+          <button class="category-btn" data-category="architecture">
+            Architecture
+          </button>
+        </div>
+
+        <!-- Skills Container -->
+        <div class="skills-wrapper" data-aos="fade-up">
+          <!-- Skills will be loaded here -->
+        </div>
       </section>
       <!--projects-->
       <section class="projects">
+        <!-- Software Projects Container -->
         <div data-aos="flip-right" class="project-container software">
           <h2>Software Projects</h2>
           <div class="softwares">
+            <!-- Java Examination System -->
             <div data-aos="zoom-in" class="soft">
               <div class="card-front">
                 <h3>Java Examination System</h3>
@@ -215,34 +153,37 @@
               </div>
               <div class="card-back">
                 <h4>
-                  assess student knowledge in various fields through dynamic
-                  question selection, and automatic grading.
+                  Java backend with Oracle DB for dynamic question selection and
+                  automatic grading.
                 </h4>
-                <a href="https://github.com/anwarrali/ExamSystem"
+                <a
+                  href="https://github.com/anwarrali/ExamSystem"
+                  target="_blank"
                   >GitHub Repo</a
                 >
               </div>
             </div>
+
+            <!-- Idea Generator and Analyzer -->
             <div data-aos="zoom-in" class="soft">
               <div class="card-front">
-                <h3>Idea Generator and Analyzer</h3>
+                <h3>Idea Generator & Analyzer</h3>
                 <p>click for more information</p>
               </div>
               <div class="card-back">
                 <h4>
-                  generate and analyze project ideas with clear plans, tools,
-                  and tech recommendations
+                  Generate project ideas with plans, tools, and tech
+                  recommendations.
                 </h4>
-                <a href="https://github.com/anwarrali/idea-generator"
-                  >GitHub Repo</a
-                >
                 <a
-                  href="https://idea-generator-production.up.railway.app/"
+                  href="https://github.com/anwarrali/idea-generator"
                   target="_blank"
-                  >Live demo</a
+                  >GitHub Repo</a
                 >
               </div>
             </div>
+
+            <!-- Travel App (Udacity) -->
             <div data-aos="zoom-in" class="soft">
               <div class="card-front">
                 <h3>Travel App</h3>
@@ -250,78 +191,147 @@
               </div>
               <div class="card-back">
                 <h4>
-                  Udacity graduation project , built using JavaScript, Webpack,
-                  and an express server. It integrates public APIs to fetch data
+                  JavaScript, Webpack, Express server with public APIs
+                  integration.
                 </h4>
-                <a href="https://github.com/anwarrali/TravelApp">GitHub Repo</a>
+                <a href="https://github.com/anwarrali/TravelApp" target="_blank"
+                  >GitHub Repo</a
+                >
               </div>
             </div>
-            <div data-aos="zoom-in" class="soft" style="display: none">
+
+            <!-- Portfolio Website -->
+            <div data-aos="zoom-in" class="soft">
               <div class="card-front">
-                <h3>Task Manager</h3>
+                <h3>Portfolio Website</h3>
                 <p>click for more information</p>
               </div>
               <div class="card-back">
                 <h4>
-                  developed using only HTML, CSS, and JS to strengthen core web
-                  development skills.
+                  Pure HTML, CSS, and JavaScript portfolio with responsive
+                  design.
                 </h4>
-                <a href="github.com">Check it out</a>
+                <a href="#" target="_blank">Live Demo</a>
               </div>
             </div>
-          </div>
+
+            <!-- Handesha Sah Club Website -->
+            <div data-aos="zoom-in" class="soft">
+              <div class="card-front">
+                <h3>Handesha Sah Club</h3>
+                <p>click for more information</p>
+              </div>
+              <div class="card-back">
+                <h4>
+                  Club website built with HTML, Tailwind CSS, and JavaScript.
+                </h4>
+                <a href="https://handesha.pages.dev" target="_blank"
+                  >Live Demo</a
+                >
+              </div>
+            </div>
+
+            <!-- FastAPI Project -->
+            <!--
+            <div data-aos="zoom-in" class="soft">
+              <div class="card-front">
+                <h3>Health App Backend</h3>
+                <p>click for more information</p>
+              </div>
+              <div class="card-back">
+                <h4>
+                  FastAPI backend for health application with Docker
+                  containerization and Alembic migrations.
+                </h4>
+                <a href="#" target="_blank">GitHub Repo</a>
+              </div>
+            </div>
+          --></div>
         </div>
 
+        <!-- Hardware Projects Container -->
         <div data-aos="flip-left" class="project-container hardware">
-          <h2>Hardware Projects</h2>
+          <h2>Hardware & IoT Projects</h2>
           <div class="hardwares">
+            <!-- Smart Alarm System -->
             <div data-aos="zoom-in" class="hard">
               <div class="card-front">
-                <h3>Computer Vision LED Controller</h3>
+                <h3>Smart Alarm System</h3>
                 <p>click for more information</p>
               </div>
               <div class="card-back">
                 <h4>
-                  A computer vision system using Python that counts fingers and
-                  controls LEDs via Arduino.
+                  IoT alarm for heavy sleepers using ESP32, IR/Ultrasonic/LDR
+                  sensors, and web interface.
                 </h4>
               </div>
             </div>
+
+            <!-- Computer Vision LED Controller -->
             <div data-aos="zoom-in" class="hard">
               <div class="card-front">
-                <h3>Memory Game (Arduino)</h3>
-                <p>click for more information</p>
-              </div>
-              <div class="card-back">
-                <h4>A memory game with LEDs programmed on Arduino.</h4>
-              </div>
-            </div>
-            <div data-aos="zoom-in" class="hard">
-              <div class="card-front">
-                <h3>
-                  Power Amplifier <br />
-                  (PCB)
-                </h3>
+                <h3>CV LED Controller</h3>
                 <p>click for more information</p>
               </div>
               <div class="card-back">
                 <h4>
-                  An audio amplifier on a PCB that boosts microphone signals to
-                  a speaker.
+                  Python computer vision counts fingers to control LEDs via
+                  Arduino.
                 </h4>
               </div>
             </div>
-            <div data-aos="zoom-in" class="hard" style="display: none">
+
+            <!-- Arduino Memory Game -->
+            <div data-aos="zoom-in" class="hard">
               <div class="card-front">
-                <h3>Clock Generator with BJT</h3>
+                <h3>LED Memory Game</h3>
                 <p>click for more information</p>
               </div>
               <div class="card-back">
                 <h4>
-                  A simple square wave generator using NPN transistors for
-                  digital circuits.
+                  Interactive memory game built with Arduino Nano and LEDs.
                 </h4>
-                <a href="github.com">Check it out</a>
+              </div>
+            </div>
+
+            <!-- Power Amplifier PCB -->
+            <div data-aos="zoom-in" class="hard">
+              <div class="card-front">
+                <h3>Power Amplifier PCB</h3>
+                <p>click for more information</p>
+              </div>
+              <div class="card-back">
+                <h4>
+                  Audio amplifier PCB boosting microphone signals to speaker.
+                </h4>
+              </div>
+            </div>
+
+            <!-- RTC Alarm System -->
+            <div data-aos="zoom-in" class="hard">
+              <div class="card-front">
+                <h3>RTC Alarm System</h3>
+                <p>click for more information</p>
+              </div>
+              <div class="card-back">
+                <h4>
+                  Arduino alarm with LCD, buttons, and RTC module for time
+                  selection.
+                </h4>
+              </div>
+            </div>
+
+            <!-- Multi-Sensor Projects -->
+            <div data-aos="zoom-in" class="hard">
+              <div class="card-front">
+                <h3>Sensor Experiments</h3>
+                <p>click for more information</p>
+              </div>
+              <div class="card-back">
+                <h4>
+                  Projects with water sensor, sound sensor, tilt sensor, and
+                  LDR.
+                </h4>
               </div>
             </div>
           </div>
