edit style data-aos

--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
         </div>
       </section>
       <!--projects-->
-      <section class="projects">
+      <section class="projects" data-aos="fade-up">
         <!-- Software Projects Container -->
-        <div data-aos="flip-right" class="project-container software">
+        <div data-aos="flip-right" class="project-container software" data-aos="fade-up">
           <h2>Software Projects</h2>
           <div class="softwares">
             <!-- Java Examination System -->
@@ -250,7 +250,7 @@
         </div>
 
         <!-- Hardware Projects Container -->
-        <div data-aos="flip-left" class="project-container hardware">
+        <div data-aos="flip-left" class="project-container hardware" data-aos="fade-up">
           <h2>Hardware & IoT Projects</h2>
           <div class="hardwares">
             <!-- Smart Alarm System -->
@@ -338,7 +338,7 @@
         </div>
       </section>
 
-      <section class="lang">
+      <section class="lang" data-aos="fade-up">
         <h2 data-aos="fade-up" class="lang-h2">Languages</h2>
         <div data-aos="fade-up" class="lang-cards">
           <div id="language-english" style="width: 200px; height: 100px"></div>
@@ -348,7 +348,7 @@
       </section>
 
       <!--education-->
-      <section class="edu">
+      <section class="edu" data-aos="fade-up">
         <h1 data-aos="fade-up">Education</h1>
         <div class="timeline" data-aos="fade-up">
           <div class="timeline-item left" data-aos="fade-right">
@@ -369,7 +369,7 @@
       </section>
 
       <!--certificates-->
-      <section class="certificates">
+      <section class="certificates" data-aos="fade-up">
         <h1>Certificates</h1>
         <div class="cert-grid">
           <div data-aos="fade-up" class="cert">
