--- a/index.html
+++ b/index.html
@@ -142,7 +142,11 @@
       <!--projects-->
       <section class="projects" data-aos="fade-up">
         <!-- Software Projects Container -->
-        <div data-aos="flip-right" class="project-container software" data-aos="fade-up">
+        <div
+          data-aos="flip-right"
+          class="project-container software"
+          data-aos="fade-up"
+        >
           <h2>Software Projects</h2>
           <div class="softwares">
             <!-- Java Examination System -->
@@ -250,7 +254,11 @@
         </div>
 
         <!-- Hardware Projects Container -->
-        <div data-aos="flip-left" class="project-container hardware" data-aos="fade-up">
+        <div
+          data-aos="flip-left"
+          class="project-container hardware"
+          data-aos="fade-up"
+        >
           <h2>Hardware & IoT Projects</h2>
           <div class="hardwares">
             <!-- Smart Alarm System -->
@@ -478,9 +486,31 @@
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-auto-scroll@0.4.1/dist/js/splide-extension-auto-scroll.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
     <script>
-      AOS.init({
-        duration: 1200,
-        once: false,
+      document.addEventListener("DOMContentLoaded", function () {
+        AOS.init({
+          duration: 1000,
+          once: false,
+          mirror: true,
+          offset: 50,
+          easing: "ease-in-out",
+          anchorPlacement: "top-bottom",
+        });
+
+        setTimeout(function () {
+          AOS.refresh();
+        }, 300);
+      });
+
+      window.addEventListener("load", function () {
+        AOS.refresh();
+      });
+
+      let resizeTimer;
+      window.addEventListener("resize", function () {
+        clearTimeout(resizeTimer);
+        resizeTimer = setTimeout(function () {
+          AOS.refresh();
+        }, 250);
       });
     </script>
   </body>
